tests/macro-tests/cases/property/incorrect_attr_args.stderr
error: unexpected token
 --> cases/property/incorrect_attr_args.rs:3:19
  |
3 | #[property(CONTEXT, unknown = true)]
  |                   ^

error: property input can only have `impl OneTrait` types
 --> cases/property/incorrect_attr_args.rs:4:47
  |
4 | fn unknown_arg(child: impl IntoUiNode, input: bool) -> UiNode {
  |                                               ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> cases/property/incorrect_attr_args.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/cases/property/incorrect_attr_args.rs`
